--- a/firmwares/stm32h750-artpi-h750/board/Kconfig
+++ b/firmwares/stm32h750-artpi-h750/board/Kconfig
@@ -69,6 +69,23 @@ menu "On-chip Peripheral Drivers"
         select RT_USING_PIN
         default y
 
+    menuconfig BSP_USING_ADC
+        bool "Enable ADC"
+        default n
+        select RT_USING_ADC
+        select RT_USING_PIN
+        if BSP_USING_ADC
+            config BSP_USING_ADC1
+                bool "Enable ADC1"
+                default n
+            config BSP_USING_ADC2
+                bool "Enable ADC2"
+                default n
+            config BSP_USING_ADC3
+                bool "Enable ADC3"
+                default n
+        endif
+
     menuconfig BSP_USING_UART
         bool "Enable UART"
         default n
