[fw] add ART-Pi GP2Y10 test

--- a/firmwares/art_pi_02/.config
+++ b/firmwares/art_pi_02/.config
@@ -571,15 +571,13 @@ CONFIG_PKG_DHTXX_VER_NUM=0x99999
 # CONFIG_PKG_USING_GY271 is not set
 CONFIG_PKG_USING_GP2Y10=y
 CONFIG_PKG_GP2Y10_PATH="/packages/peripherals/sensors/gp2y10"
-CONFIG_PKG_USING_GP2Y10_ADC_DEV_NAME="adc12"
-CONFIG_PKG_USING_GP2Y10_ADC_DEV_CHANNEL=0
-CONFIG_PKG_USING_GP2Y10_CONVERT_BITS=12
+CONFIG_PKG_USING_GP2Y10_ADC_DEV_NAME="adc1"
+CONFIG_PKG_USING_GP2Y10_ADC_DEV_CHANNEL=5
+CONFIG_PKG_USING_GP2Y10_CONVERT_BITS=16
 CONFIG_PKG_USING_GP2Y10_VOLTAGE_RATIO=11
-# CONFIG_PKG_USING_GP2Y10_SOFT_FILTER is not set
+CONFIG_PKG_USING_GP2Y10_SOFT_FILTER=y
 CONFIG_PKG_USING_GP2Y10_DEBUG=y
-CONFIG_PKG_USING_GP2Y10_SAMPLE=y
-CONFIG_PKG_USING_GP2Y10_SAMPLE_ILED_PIN=95
-CONFIG_PKG_USING_GP2Y10_SAMPLE_AOUT_PIN=35
+# CONFIG_PKG_USING_GP2Y10_SAMPLE is not set
 # CONFIG_PKG_USING_GP2Y10_V100 is not set
 CONFIG_PKG_USING_GP2Y10_LATEST_VERSION=y
 CONFIG_PKG_GP2Y10_VER="latest"
@@ -796,6 +794,10 @@ CONFIG_BSP_USING_USB_TO_USART=y
 # On-chip Peripheral
 #
 CONFIG_BSP_USING_GPIO=y
+CONFIG_BSP_USING_ADC=y
+CONFIG_BSP_USING_ADC1=y
+# CONFIG_BSP_USING_ADC2 is not set
+# CONFIG_BSP_USING_ADC3 is not set
 CONFIG_BSP_USING_UART=y
 # CONFIG_BSP_USING_UART1 is not set
 # CONFIG_BSP_USING_UART3 is not set
