sync art_pi_02 project

--- a/firmwares/art_pi_02/.config
+++ b/firmwares/art_pi_02/.config
@@ -586,8 +586,9 @@ CONFIG_PKG_SGP30_PATH="/packages/peripherals/sensors/sgp30"
 CONFIG_PKG_USING_SGP30_I2C_ADDR=y
 CONFIG_PKG_USING_SGP30_I2C_ADDRESS=0x58
 # CONFIG_PKG_USING_SGP30_INIT_BASELINE is not set
-# CONFIG_PKG_USING_SGP30_DEBUG is not set
-# CONFIG_PKG_USING_SGP30_SAMPLE is not set
+CONFIG_PKG_USING_SGP30_DEBUG=y
+CONFIG_PKG_USING_SGP30_SAMPLE=y
+CONFIG_PKG_USING_SGP30_SAMPLE_I2C_BUS_NAME="i2c1"
 # CONFIG_PKG_USING_SGP30_V100 is not set
 CONFIG_PKG_USING_SGP30_LATEST_VERSION=y
 CONFIG_PKG_SGP30_VER="latest"
@@ -811,8 +812,8 @@ CONFIG_BSP_USING_I2C1=y
 #
 # Notice: PB6 --> 22; PB7 --> 23
 #
-CONFIG_BSP_I2C1_SCL_PIN=22
-CONFIG_BSP_I2C1_SDA_PIN=23
+CONFIG_BSP_I2C1_SCL_PIN=123
+CONFIG_BSP_I2C1_SDA_PIN=124
 # CONFIG_BSP_USING_I2C2 is not set
 # CONFIG_BSP_USING_I2C3 is not set
 # CONFIG_BSP_USING_SDIO is not set
