--- a/firmwares/art_pi_05/.config
+++ b/firmwares/art_pi_05/.config
@@ -138,7 +138,10 @@ CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_CAN is not set
 # CONFIG_RT_USING_HWTIMER is not set
 # CONFIG_RT_USING_CPUTIME is not set
-# CONFIG_RT_USING_I2C is not set
+CONFIG_RT_USING_I2C=y
+# CONFIG_RT_I2C_DEBUG is not set
+CONFIG_RT_USING_I2C_BITOPS=y
+# CONFIG_RT_I2C_BITOPS_DEBUG is not set
 CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_ADC is not set
 # CONFIG_RT_USING_DAC is not set
@@ -157,7 +160,7 @@ CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
 # CONFIG_RT_USING_SENSOR is not set
-# CONFIG_RT_USING_TOUCH is not set
+CONFIG_RT_USING_TOUCH=y
 # CONFIG_RT_USING_HWCRYPTO is not set
 # CONFIG_RT_USING_PULSE_ENCODER is not set
 # CONFIG_RT_USING_INPUT_CAPTURE is not set
@@ -564,7 +567,20 @@ CONFIG_PKG_LV_MUSIC_DEMO_VER="v0.1.1"
 # CONFIG_PKG_USING_PCA9685 is not set
 # CONFIG_PKG_USING_I2C_TOOLS is not set
 # CONFIG_PKG_USING_NRF24L01 is not set
-# CONFIG_PKG_USING_TOUCH_DRIVERS is not set
+CONFIG_PKG_USING_TOUCH_DRIVERS=y
+# CONFIG_PKG_USING_GT9147 is not set
+# CONFIG_PKG_USING_GT1151 is not set
+# CONFIG_PKG_USING_GT917S is not set
+# CONFIG_PKG_USING_GT911 is not set
+# CONFIG_PKG_USING_FT6206 is not set
+# CONFIG_PKG_USING_FT5426 is not set
+CONFIG_PKG_USING_FT6236=y
+CONFIG_PKG_FT6236_PATH="/packages/peripherals/touch/ft6236"
+CONFIG_PKG_USING_FT6236_SAMPLE=y
+# CONFIG_PKG_USING_FT6236_V100 is not set
+CONFIG_PKG_USING_FT6236_LATEST_VERSION=y
+CONFIG_PKG_FT6236_VER="latest"
+# CONFIG_PKG_USING_XPT2046_TOUCH is not set
 # CONFIG_PKG_USING_MAX17048 is not set
 # CONFIG_PKG_USING_RPLIDAR is not set
 # CONFIG_PKG_USING_AS608 is not set
@@ -700,7 +716,7 @@ CONFIG_ART_PI_USING_MEDIA_IO=y
 CONFIG_BSP_USING_SPI_LCD_ILI9488=y
 CONFIG_PKG_USING_PERSIMMON_SRC=y
 CONFIG_MEDIA_IO_USING_SCREEN=y
-# CONFIG_MEDIA_IO_USING_TOUCH is not set
+CONFIG_MEDIA_IO_USING_TOUCH=y
 # CONFIG_MEDIA_IO_USING_AUDIO is not set
 # CONFIG_ART_PI_USING_INDUSTRY_IO is not set
 # CONFIG_ART_PI_USING_LORA_SHIELD_LRS007 is not set
@@ -732,7 +748,16 @@ CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI2=y
 # CONFIG_BSP_USING_SPI4 is not set
 # CONFIG_BSP_USING_QSPI is not set
-# CONFIG_BSP_USING_I2C is not set
+CONFIG_BSP_USING_I2C=y
+# CONFIG_BSP_USING_I2C1 is not set
+CONFIG_BSP_USING_I2C2=y
+
+#
+# Notice: PH13 --> 125; PH15 --> 127
+#
+CONFIG_BSP_I2C2_SCL_PIN=127
+CONFIG_BSP_I2C2_SDA_PIN=125
+# CONFIG_BSP_USING_I2C3 is not set
 # CONFIG_BSP_USING_SDIO is not set
 CONFIG_BSP_USING_SDRAM=y
 # CONFIG_BSP_USING_ETH is not set
