--- a/firmwares/art_pi_05/.settings/projcfg.ini
+++ b/firmwares/art_pi_05/.settings/projcfg.ini
@@ -1,16 +1,16 @@
 #RT-Thread Studio Project Configuration
-#Fri Jan 28 05:09:02 CST 2022
+#Thu Feb 03 16:00:41 CST 2022
 cfg_version=v3.0
 board_name=STM32H750-RT-ART-Pi
 example_name=
 hardware_adapter=ST-LINK
-project_type=rt-thread
 board_base_nano_proj=False
+project_type=rt-thread
 chip_name=STM32H750XBHx
 selected_rtt_version=4.0.3
 bsp_version=1.2.1
 os_branch=full
-output_project_path=C\:/Workspace/Projects/FCTC-ART-Pi-Code/firmwares
+output_project_path=C\:\\Workspace\\Projects\\FCTC-ART-Pi-Code\\firmwares\\art_pi_05
 is_base_example_project=False
 is_use_scons_build=True
 project_base_bsp=true
