[fw] finish art_pi_02

--- a/firmwares/art_pi_02/.config
+++ b/firmwares/art_pi_02/.config
@@ -226,7 +226,33 @@ CONFIG_RT_USING_POSIX=y
 # Utilities
 #
 # CONFIG_RT_USING_RYM is not set
-# CONFIG_RT_USING_ULOG is not set
+CONFIG_RT_USING_ULOG=y
+# CONFIG_ULOG_OUTPUT_LVL_A is not set
+# CONFIG_ULOG_OUTPUT_LVL_E is not set
+# CONFIG_ULOG_OUTPUT_LVL_W is not set
+# CONFIG_ULOG_OUTPUT_LVL_I is not set
+CONFIG_ULOG_OUTPUT_LVL_D=y
+CONFIG_ULOG_OUTPUT_LVL=7
+# CONFIG_ULOG_USING_ISR_LOG is not set
+CONFIG_ULOG_ASSERT_ENABLE=y
+CONFIG_ULOG_LINE_BUF_SIZE=128
+# CONFIG_ULOG_USING_ASYNC_OUTPUT is not set
+
+#
+# log format
+#
+# CONFIG_ULOG_OUTPUT_FLOAT is not set
+CONFIG_ULOG_USING_COLOR=y
+CONFIG_ULOG_OUTPUT_TIME=y
+# CONFIG_ULOG_TIME_USING_TIMESTAMP is not set
+CONFIG_ULOG_OUTPUT_LEVEL=y
+CONFIG_ULOG_OUTPUT_TAG=y
+# CONFIG_ULOG_OUTPUT_THREAD_NAME is not set
+# end of log format
+
+CONFIG_ULOG_BACKEND_USING_CONSOLE=y
+# CONFIG_ULOG_USING_FILTER is not set
+# CONFIG_ULOG_USING_SYSLOG is not set
 # CONFIG_RT_USING_UTEST is not set
 # end of Utilities
 
@@ -302,6 +328,7 @@ CONFIG_RT_USING_POSIX=y
 # end of IoT Cloud
 
 # CONFIG_PKG_USING_NIMBLE is not set
+# CONFIG_PKG_USING_LLSYNC_SDK_ADAPTER is not set
 # CONFIG_PKG_USING_OTA_DOWNLOADER is not set
 # CONFIG_PKG_USING_IPMSG is not set
 # CONFIG_PKG_USING_LSSDP is not set
@@ -526,7 +553,7 @@ CONFIG_RT_USING_POSIX=y
 # CONFIG_PKG_USING_ARM_2D is not set
 # CONFIG_PKG_USING_MCUBOOT is not set
 # CONFIG_PKG_USING_TINYUSB is not set
-# CONFIG_PKG_USING_USB_STACK is not set
+# CONFIG_PKG_USING_CHERRYUSB is not set
 # end of system packages
 
 #
@@ -576,7 +603,7 @@ CONFIG_PKG_USING_GP2Y10_ADC_DEV_CHANNEL=5
 CONFIG_PKG_USING_GP2Y10_CONVERT_BITS=16
 CONFIG_PKG_USING_GP2Y10_VOLTAGE_RATIO=11
 CONFIG_PKG_USING_GP2Y10_SOFT_FILTER=y
-CONFIG_PKG_USING_GP2Y10_DEBUG=y
+# CONFIG_PKG_USING_GP2Y10_DEBUG is not set
 # CONFIG_PKG_USING_GP2Y10_SAMPLE is not set
 # CONFIG_PKG_USING_GP2Y10_V100 is not set
 CONFIG_PKG_USING_GP2Y10_LATEST_VERSION=y
@@ -586,9 +613,8 @@ CONFIG_PKG_SGP30_PATH="/packages/peripherals/sensors/sgp30"
 CONFIG_PKG_USING_SGP30_I2C_ADDR=y
 CONFIG_PKG_USING_SGP30_I2C_ADDRESS=0x58
 # CONFIG_PKG_USING_SGP30_INIT_BASELINE is not set
-CONFIG_PKG_USING_SGP30_DEBUG=y
-CONFIG_PKG_USING_SGP30_SAMPLE=y
-CONFIG_PKG_USING_SGP30_SAMPLE_I2C_BUS_NAME="i2c1"
+# CONFIG_PKG_USING_SGP30_DEBUG is not set
+# CONFIG_PKG_USING_SGP30_SAMPLE is not set
 # CONFIG_PKG_USING_SGP30_V100 is not set
 CONFIG_PKG_USING_SGP30_LATEST_VERSION=y
 CONFIG_PKG_SGP30_VER="latest"
