[fw] finish RS-232 test

--- a/firmwares/art_pi_03/.config
+++ b/firmwares/art_pi_03/.config
@@ -573,7 +573,7 @@ CONFIG_PKG_PMSXX_PATH="/packages/peripherals/sensors/pmsxx"
 CONFIG_PKG_USING_PMSXX_ENHANCED=y
 CONFIG_PKG_USING_PMSXX_SEND_WAIT_TIME=2000
 # CONFIG_PKG_USING_PMSXX_INIT_ASYN is not set
-# CONFIG_PKG_USING_PMSXX_UART_DMA is not set
+CONFIG_PKG_USING_PMSXX_UART_DMA=y
 # CONFIG_PKG_USING_PMSXX_DEBUG is not set
 # CONFIG_PKG_USING_PMSXX_SAMPLE is not set
 CONFIG_PKG_USING_PMSXX_LATEST_VERSION=y
