[fw] add freemodbus demo

--- a/firmwares/art_pi_04/.config
+++ b/firmwares/art_pi_04/.config
@@ -118,27 +118,9 @@ CONFIG_DFS_FILESYSTEMS_MAX=6
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=6
 CONFIG_DFS_FD_MAX=32
 # CONFIG_RT_USING_DFS_MNTTABLE is not set
-CONFIG_RT_USING_DFS_ELMFAT=y
-
-#
-# elm-chan's FatFs, Generic FAT Filesystem Module
-#
-CONFIG_RT_DFS_ELM_CODE_PAGE=437
-CONFIG_RT_DFS_ELM_WORD_ACCESS=y
-# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
-# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
-# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
-CONFIG_RT_DFS_ELM_USE_LFN_3=y
-CONFIG_RT_DFS_ELM_USE_LFN=3
-CONFIG_RT_DFS_ELM_MAX_LFN=255
-CONFIG_RT_DFS_ELM_DRIVES=2
-CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
-# CONFIG_RT_DFS_ELM_USE_ERASE is not set
-CONFIG_RT_DFS_ELM_REENTRANT=y
-# end of elm-chan's FatFs, Generic FAT Filesystem Module
-
+# CONFIG_RT_USING_DFS_ELMFAT is not set
 CONFIG_RT_USING_DFS_DEVFS=y
-CONFIG_RT_USING_DFS_ROMFS=y
+# CONFIG_RT_USING_DFS_ROMFS is not set
 # CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_DFS_UFFS is not set
 # CONFIG_RT_USING_DFS_JFFS2 is not set
@@ -165,13 +147,7 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
 # CONFIG_RT_USING_RTC is not set
-CONFIG_RT_USING_SDIO=y
-CONFIG_RT_SDIO_STACK_SIZE=512
-CONFIG_RT_SDIO_THREAD_PRIORITY=15
-CONFIG_RT_MMCSD_STACK_SIZE=1024
-CONFIG_RT_MMCSD_THREAD_PREORITY=22
-CONFIG_RT_MMCSD_MAX_PARTITION=16
-# CONFIG_RT_SDIO_DEBUG is not set
+# CONFIG_RT_USING_SDIO is not set
 CONFIG_RT_USING_SPI=y
 # CONFIG_RT_USING_QSPI is not set
 # CONFIG_RT_USING_SPI_MSD is not set
@@ -273,7 +249,35 @@ CONFIG_RT_USING_POSIX=y
 # CONFIG_PKG_USING_CJSON is not set
 # CONFIG_PKG_USING_JSMN is not set
 # CONFIG_PKG_USING_LIBMODBUS is not set
-# CONFIG_PKG_USING_FREEMODBUS is not set
+CONFIG_PKG_USING_FREEMODBUS=y
+CONFIG_PKG_FREEMODBUS_PATH="/packages/iot/freemodbus"
+CONFIG_PKG_MODBUS_MASTER=y
+
+#
+# advanced configuration
+#
+CONFIG_RT_M_DISCRETE_INPUT_START=0
+CONFIG_RT_M_DISCRETE_INPUT_NDISCRETES=16
+CONFIG_RT_M_COIL_START=0
+CONFIG_RT_M_COIL_NCOILS=64
+CONFIG_RT_M_REG_INPUT_START=0
+CONFIG_RT_M_REG_INPUT_NREGS=100
+CONFIG_RT_M_REG_HOLDING_START=0
+CONFIG_RT_M_REG_HOLDING_NREGS=100
+CONFIG_RT_M_HD_RESERVE=0
+CONFIG_RT_M_IN_RESERVE=0
+CONFIG_RT_M_CO_RESERVE=0
+CONFIG_RT_M_DI_RESERVE=0
+# end of advanced configuration
+
+CONFIG_PKG_MODBUS_MASTER_RTU=y
+CONFIG_RT_MODBUS_MASTER_USE_CONTROL_PIN=y
+CONFIG_MODBUS_MASTER_RT_CONTROL_PIN_INDEX=132
+# CONFIG_PKG_MODBUS_MASTER_SAMPLE is not set
+# CONFIG_PKG_MODBUS_SLAVE is not set
+CONFIG_PKG_USING_FREEMODBUS_V160=y
+# CONFIG_PKG_USING_FREEMODBUS_LATEST_VERSION is not set
+CONFIG_PKG_FREEMODBUS_VER="v1.6.0"
 # CONFIG_PKG_USING_LJSON is not set
 # CONFIG_PKG_USING_EZXML is not set
 # CONFIG_PKG_USING_NANOPB is not set
@@ -322,6 +326,7 @@ CONFIG_RT_USING_POSIX=y
 # end of IoT Cloud
 
 # CONFIG_PKG_USING_NIMBLE is not set
+# CONFIG_PKG_USING_LLSYNC_SDK_ADAPTER is not set
 # CONFIG_PKG_USING_OTA_DOWNLOADER is not set
 # CONFIG_PKG_USING_IPMSG is not set
 # CONFIG_PKG_USING_LSSDP is not set
@@ -546,7 +551,7 @@ CONFIG_RT_USING_POSIX=y
 # CONFIG_PKG_USING_ARM_2D is not set
 # CONFIG_PKG_USING_MCUBOOT is not set
 # CONFIG_PKG_USING_TINYUSB is not set
-# CONFIG_PKG_USING_USB_STACK is not set
+# CONFIG_PKG_USING_CHERRYUSB is not set
 # end of system packages
 
 #
@@ -725,9 +730,7 @@ CONFIG_BSP_USING_USB_TO_USART=y
 # CONFIG_BSP_USING_WIFI is not set
 # CONFIG_BSP_USING_OV2640 is not set
 # CONFIG_BSP_USING_GC0328C is not set
-CONFIG_BSP_USING_FS=y
-CONFIG_BSP_USING_SDCARD_FS=y
-# CONFIG_BSP_USING_SPI_FLASH_FS is not set
+# CONFIG_BSP_USING_FS is not set
 # end of Onboard Peripheral
 
 #
@@ -738,13 +741,12 @@ CONFIG_BSP_USING_UART=y
 # CONFIG_BSP_USING_UART1 is not set
 # CONFIG_BSP_USING_UART3 is not set
 CONFIG_BSP_USING_UART4=y
+CONFIG_BSP_USING_UART5=y
 # CONFIG_BSP_USING_UART6 is not set
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_QSPI is not set
 # CONFIG_BSP_USING_I2C is not set
-CONFIG_BSP_USING_SDIO=y
-CONFIG_BSP_USING_SDIO1=y
-# CONFIG_BSP_USING_SDIO2 is not set
+# CONFIG_BSP_USING_SDIO is not set
 # CONFIG_BSP_USING_SDRAM is not set
 # CONFIG_BSP_USING_ETH is not set
 # CONFIG_BSP_USING_LCD is not set
