[fw] add EasyFlash test

--- a/firmwares/art_pi_05/.config
+++ b/firmwares/art_pi_05/.config
@@ -437,7 +437,28 @@ CONFIG_RT_USING_POSIX=y
 # tools packages
 #
 # CONFIG_PKG_USING_CMBACKTRACE is not set
-# CONFIG_PKG_USING_EASYFLASH is not set
+CONFIG_PKG_USING_EASYFLASH=y
+CONFIG_PKG_EASYFLASH_PATH="/packages/tools/EasyFlash"
+CONFIG_PKG_EASYFLASH_ENV=y
+# CONFIG_PKG_EASYFLASH_ENV_AUTO_UPDATE is not set
+# CONFIG_PKG_EASYFLASH_LOG is not set
+# CONFIG_PKG_EASYFLASH_IAP is not set
+CONFIG_PKG_EASYFLASH_ERASE_GRAN=4096
+CONFIG_PKG_EASYFLASH_WRITE_GRAN_1BIT=y
+# CONFIG_PKG_EASYFLASH_WRITE_GRAN_8BITS is not set
+# CONFIG_PKG_EASYFLASH_WRITE_GRAN_32BITS is not set
+CONFIG_PKG_EASYFLASH_WRITE_GRAN=1
+CONFIG_PKG_EASYFLASH_START_ADDR=0
+CONFIG_PKG_EASYFLASH_DEBUG=y
+CONFIG_PKG_USING_EASYFLASH_V410=y
+# CONFIG_PKG_USING_EASYFLASH_V400 is not set
+# CONFIG_PKG_USING_EASYFLASH_V330 is not set
+# CONFIG_PKG_USING_EASYFLASH_V321 is not set
+# CONFIG_PKG_USING_EASYFLASH_V310 is not set
+# CONFIG_PKG_USING_EASYFLASH_V300 is not set
+# CONFIG_PKG_USING_EASYFLASH_LATEST_VERSION is not set
+CONFIG_PKG_EASYFLASH_VER="v4.1.0"
+CONFIG_PKG_EASYFLASH_VER_NUM=0x40100
 # CONFIG_PKG_USING_EASYLOGGER is not set
 # CONFIG_PKG_USING_SYSTEMVIEW is not set
 # CONFIG_PKG_USING_SEGGER_RTT is not set
