--- a/firmwares/art_pi_05/.config
+++ b/firmwares/art_pi_05/.config
@@ -565,7 +565,26 @@ CONFIG_PKG_USING_FAL_V00500=y
 # CONFIG_PKG_USING_FAL_LATEST_VERSION is not set
 CONFIG_PKG_FAL_VER="v0.5.0"
 CONFIG_PKG_FAL_VER_NUM=0x00500
-# CONFIG_PKG_USING_FLASHDB is not set
+CONFIG_PKG_USING_FLASHDB=y
+CONFIG_PKG_FLASHDB_PATH="/packages/system/FlashDB"
+# CONFIG_FDB_USING_KVDB is not set
+CONFIG_FDB_USING_TSDB=y
+CONFIG_FDB_USING_FAL_MODE=y
+CONFIG_FDB_WRITE_GRAN_1BIT=y
+# CONFIG_FDB_WRITE_GRAN_8BITS is not set
+# CONFIG_FDB_WRITE_GRAN_32BITS is not set
+CONFIG_FDB_WRITE_GRAN=1
+CONFIG_FDB_NOT_USING_FILE_MODE=y
+# CONFIG_FDB_USING_FILE_LIBC_MODE is not set
+# CONFIG_FDB_USING_FILE_POSIX_MODE is not set
+# CONFIG_FLASHDB_USING_SAMPLES is not set
+CONFIG_FDB_DEBUG_ENABLE=y
+CONFIG_PKG_USING_FLASHDB_V10101=y
+# CONFIG_PKG_USING_FLASHDB_V10100 is not set
+# CONFIG_PKG_USING_FLASHDB_V10000 is not set
+# CONFIG_PKG_USING_FLASHDB_LATEST_VERSION is not set
+CONFIG_PKG_FLASHDB_VER="v1.1.1"
+CONFIG_PKG_FLASHDB_VER_NUM=0x10101
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
 # CONFIG_PKG_USING_DFS_YAFFS is not set
