--- a/firmwares/art_pi_06/applications/SConscript
+++ b/firmwares/art_pi_06/applications/SConscript
@@ -1,9 +1,15 @@
 import rtconfig
 from building import *
+import os
 
 cwd  = GetCurrentDir()
-path = [cwd]
+
 src  = Glob('*.c')
+src  += Glob('lvgl/*.c')
+
+path = [cwd]
+path += [cwd + '/lvgl']
+
 
 group = DefineGroup('Applications', src, depend = [''], CPPPATH = path)
 
