--- a/firmwares/art_pi_06/libraries/Kconfig
+++ b/firmwares/art_pi_06/libraries/Kconfig
@@ -188,6 +188,10 @@ menu "On-chip Peripheral"
                 bool "Enable UART4"
                 default n
                 
+            config BSP_USING_UART5
+                bool "Enable UART5"
+                default n
+                
             config BSP_USING_UART6
                 bool "Enable UART6"
                 default n
