[fw] add github rest api test

--- a/firmwares/art_pi_07/.config
+++ b/firmwares/art_pi_07/.config
@@ -149,7 +149,9 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
-# CONFIG_RT_USING_RTC is not set
+CONFIG_RT_USING_RTC=y
+# CONFIG_RT_USING_ALARM is not set
+CONFIG_RT_USING_SOFT_RTC=y
 CONFIG_RT_USING_SDIO=y
 CONFIG_RT_SDIO_STACK_SIZE=512
 CONFIG_RT_SDIO_THREAD_PRIORITY=15
@@ -236,10 +238,10 @@ CONFIG_RT_USING_SAL=y
 # protocol stack implement
 #
 CONFIG_SAL_USING_LWIP=y
+CONFIG_SAL_USING_TLS=y
 # end of protocol stack implement
 
-# CONFIG_SAL_USING_POSIX is not set
-CONFIG_SAL_SOCKETS_NUM=16
+CONFIG_SAL_USING_POSIX=y
 # end of Socket abstraction layer
 
 #
@@ -353,7 +355,24 @@ CONFIG_RT_USING_RYM=y
 # CONFIG_PKG_USING_LORAWAN_DRIVER is not set
 # CONFIG_PKG_USING_PAHOMQTT is not set
 # CONFIG_PKG_USING_UMQTT is not set
-# CONFIG_PKG_USING_WEBCLIENT is not set
+CONFIG_PKG_USING_WEBCLIENT=y
+CONFIG_PKG_WEBCLIENT_PATH="/packages/iot/webclient"
+CONFIG_WEBCLIENT_DEBUG=y
+# CONFIG_WEBCLIENT_USING_SAMPLES is not set
+# CONFIG_WEBCLIENT_USING_FILE_DOWMLOAD is not set
+# CONFIG_WEBCLIENT_NOT_USE_TLS is not set
+# CONFIG_WEBCLIENT_USING_SAL_TLS is not set
+CONFIG_WEBCLIENT_USING_MBED_TLS=y
+CONFIG_PKG_USING_WEBCLIENT_V220=y
+# CONFIG_PKG_USING_WEBCLIENT_V212 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V211 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V210 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V201 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V200 is not set
+# CONFIG_PKG_USING_WEBCLIENT_V100 is not set
+# CONFIG_PKG_USING_WEBCLIENT_LATEST_VERSION is not set
+CONFIG_PKG_WEBCLIENT_VER="v2.2.0"
+CONFIG_PKG_WEBCLIENT_VER_NUM=0x20200
 # CONFIG_PKG_USING_WEBNET is not set
 # CONFIG_PKG_USING_MONGOOSE is not set
 # CONFIG_PKG_USING_MYMQTT is not set
@@ -452,7 +471,38 @@ CONFIG_RT_USING_RYM=y
 #
 # security packages
 #
-# CONFIG_PKG_USING_MBEDTLS is not set
+CONFIG_PKG_USING_MBEDTLS=y
+
+#
+# Select Root Certificate
+#
+# CONFIG_PKG_USING_MBEDTLS_USE_ALL_CERTS is not set
+CONFIG_PKG_USING_MBEDTLS_USER_CERTS=y
+# CONFIG_PKG_USING_MBEDTLS_THAWTE_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_VERSIGN_PBULIC_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_VERSIGN_UNIVERSAL_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_GEOTRUST_ROOT_CA is not set
+CONFIG_PKG_USING_MBEDTLS_DIGICERT_ROOT_CA=y
+# CONFIG_PKG_USING_MBEDTLS_GODADDY_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_COMODOR_ROOT_CA is not set
+CONFIG_PKG_USING_MBEDTLS_DST_ROOT_CA=y
+# CONFIG_PKG_USING_MBEDTLS_CLOBALSIGN_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_ENTRUST_ROOT_CA is not set
+# CONFIG_PKG_USING_MBEDTLS_AMAZON_ROOT_CA is not set
+# end of Select Root Certificate
+
+CONFIG_MBEDTLS_AES_ROM_TABLES=y
+CONFIG_MBEDTLS_ECP_WINDOW_SIZE=2
+CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=3584
+CONFIG_PKG_USING_MBEDTLS_EXAMPLE=y
+# CONFIG_PKG_USING_MBEDTLS_DEBUG is not set
+CONFIG_PKG_MBEDTLS_PATH="/packages/security/mbedtls"
+CONFIG_PKG_USING_MBEDTLS_V27101=y
+# CONFIG_PKG_USING_MBEDTLS_V2710 is not set
+# CONFIG_PKG_USING_MBEDTLS_V261 is not set
+# CONFIG_PKG_USING_MBEDTLS_V260 is not set
+# CONFIG_PKG_USING_MBEDTLS_LATEST_VERSION is not set
+CONFIG_PKG_MBEDTLS_VER="v2.7.10.1"
 # CONFIG_PKG_USING_LIBSODIUM is not set
 # CONFIG_PKG_USING_TINYCRYPT is not set
 # CONFIG_PKG_USING_TFM is not set
@@ -542,6 +592,7 @@ CONFIG_RT_USING_RYM=y
 # CONFIG_PKG_USING_CPU_USAGE is not set
 # CONFIG_PKG_USING_GBK2UTF8 is not set
 # CONFIG_PKG_USING_VCONSOLE is not set
+# CONFIG_PKG_USING_MBEDTLS_BENCH is not set
 # CONFIG_PKG_USING_KDB is not set
 # CONFIG_PKG_USING_WAMR is not set
 # CONFIG_PKG_USING_MICRO_XRCE_DDS_CLIENT is not set
@@ -677,6 +728,7 @@ CONFIG_PKG_FAL_VER_NUM=0x10000
 # CONFIG_PKG_USING_WM_LIBRARIES is not set
 # CONFIG_PKG_USING_KENDRYTE_SDK is not set
 # CONFIG_PKG_USING_INFRARED is not set
+# CONFIG_PKG_USING_MULTI_INFRARED is not set
 # CONFIG_PKG_USING_AGILE_BUTTON is not set
 # CONFIG_PKG_USING_AGILE_LED is not set
 # CONFIG_PKG_USING_AT24CXX is not set
@@ -754,6 +806,11 @@ CONFIG_PKG_FAL_VER_NUM=0x10000
 #
 
 #
+# project laboratory
+#
+# end of project laboratory
+
+#
 # samples: kernel and components samples
 #
 # CONFIG_PKG_USING_KERNEL_SAMPLES is not set
@@ -806,6 +863,7 @@ CONFIG_PKG_FAL_VER_NUM=0x10000
 # CONFIG_PKG_USING_DESIGN_PATTERN is not set
 # CONFIG_PKG_USING_CONTROLLER is not set
 # CONFIG_PKG_USING_PHASE_LOCKED_LOOP is not set
+# CONFIG_PKG_USING_MFBD is not set
 # end of miscellaneous packages
 # end of RT-Thread online packages
 
