[fw] finish HTTPS test

--- a/firmwares/art_pi_07/.config
+++ b/firmwares/art_pi_07/.config
@@ -379,7 +379,14 @@ CONFIG_PKG_WEBCLIENT_VER_NUM=0x20200
 # CONFIG_PKG_USING_KAWAII_MQTT is not set
 # CONFIG_PKG_USING_BC28_MQTT is not set
 # CONFIG_PKG_USING_WEBTERMINAL is not set
-# CONFIG_PKG_USING_CJSON is not set
+CONFIG_PKG_USING_CJSON=y
+CONFIG_PKG_CJSON_PATH="/packages/iot/cJSON"
+CONFIG_PKG_USING_CJSON_V1715=y
+# CONFIG_PKG_USING_CJSON_V1714 is not set
+# CONFIG_PKG_USING_CJSON_V159 is not set
+# CONFIG_PKG_USING_CJSON_V102 is not set
+# CONFIG_PKG_USING_CJSON_LATEST_VERSION is not set
+CONFIG_PKG_CJSON_VER="v1.7.15"
 # CONFIG_PKG_USING_JSMN is not set
 # CONFIG_PKG_USING_LIBMODBUS is not set
 # CONFIG_PKG_USING_FREEMODBUS is not set
