[fw] finish Web server

--- a/firmwares/art_pi_07/.config
+++ b/firmwares/art_pi_07/.config
@@ -118,9 +118,27 @@ CONFIG_DFS_FILESYSTEMS_MAX=6
 CONFIG_DFS_FILESYSTEM_TYPES_MAX=6
 CONFIG_DFS_FD_MAX=32
 # CONFIG_RT_USING_DFS_MNTTABLE is not set
-# CONFIG_RT_USING_DFS_ELMFAT is not set
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=2
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+# end of elm-chan's FatFs, Generic FAT Filesystem Module
+
 CONFIG_RT_USING_DFS_DEVFS=y
-# CONFIG_RT_USING_DFS_ROMFS is not set
+CONFIG_RT_USING_DFS_ROMFS=y
 # CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_DFS_UFFS is not set
 # CONFIG_RT_USING_DFS_JFFS2 is not set
@@ -146,7 +164,7 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_ADC is not set
 # CONFIG_RT_USING_DAC is not set
 # CONFIG_RT_USING_PWM is not set
-# CONFIG_RT_USING_MTD_NOR is not set
+CONFIG_RT_USING_MTD_NOR=y
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
 CONFIG_RT_USING_RTC=y
@@ -173,7 +191,8 @@ CONFIG_RT_SFUD_SPI_MAX_HZ=50000000
 # CONFIG_RT_USING_SPI_WIFI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
-# CONFIG_RT_USING_SENSOR is not set
+CONFIG_RT_USING_SENSOR=y
+CONFIG_RT_USING_SENSOR_CMD=y
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
 # CONFIG_RT_USING_PULSE_ENCODER is not set
@@ -296,7 +315,7 @@ CONFIG_RT_LWIP_TCP_SND_BUF=8196
 CONFIG_RT_LWIP_TCP_WND=8196
 CONFIG_RT_LWIP_TCPTHREAD_PRIORITY=10
 CONFIG_RT_LWIP_TCPTHREAD_MBOX_SIZE=8
-CONFIG_RT_LWIP_TCPTHREAD_STACKSIZE=1024
+CONFIG_RT_LWIP_TCPTHREAD_STACKSIZE=2048
 # CONFIG_LWIP_NO_RX_THREAD is not set
 # CONFIG_LWIP_NO_TX_THREAD is not set
 CONFIG_RT_LWIP_ETHTHREAD_PRIORITY=12
@@ -358,7 +377,7 @@ CONFIG_RT_USING_RYM=y
 # CONFIG_PKG_USING_UMQTT is not set
 CONFIG_PKG_USING_WEBCLIENT=y
 CONFIG_PKG_WEBCLIENT_PATH="/packages/iot/webclient"
-CONFIG_WEBCLIENT_DEBUG=y
+# CONFIG_WEBCLIENT_DEBUG is not set
 # CONFIG_WEBCLIENT_USING_SAMPLES is not set
 # CONFIG_WEBCLIENT_USING_FILE_DOWMLOAD is not set
 # CONFIG_WEBCLIENT_NOT_USE_TLS is not set
@@ -374,7 +393,36 @@ CONFIG_PKG_USING_WEBCLIENT_V220=y
 # CONFIG_PKG_USING_WEBCLIENT_LATEST_VERSION is not set
 CONFIG_PKG_WEBCLIENT_VER="v2.2.0"
 CONFIG_PKG_WEBCLIENT_VER_NUM=0x20200
-# CONFIG_PKG_USING_WEBNET is not set
+CONFIG_PKG_USING_WEBNET=y
+CONFIG_PKG_WEBNET_PATH="/packages/iot/webnet"
+CONFIG_WEBNET_PORT=80
+CONFIG_WEBNET_CONN_MAX=16
+CONFIG_WEBNET_ROOT="/flash/webnet"
+
+#
+# Select supported modules
+#
+# CONFIG_WEBNET_USING_LOG is not set
+# CONFIG_WEBNET_USING_AUTH is not set
+CONFIG_WEBNET_USING_CGI=y
+# CONFIG_WEBNET_USING_ASP is not set
+# CONFIG_WEBNET_USING_SSI is not set
+# CONFIG_WEBNET_USING_INDEX is not set
+# CONFIG_WEBNET_USING_ALIAS is not set
+# CONFIG_WEBNET_USING_DAV is not set
+# CONFIG_WEBNET_USING_UPLOAD is not set
+# CONFIG_WEBNET_USING_GZIP is not set
+CONFIG_WEBNET_CACHE_LEVEL=0
+# end of Select supported modules
+
+# CONFIG_WEBNET_USING_SAMPLES is not set
+CONFIG_PKG_USING_WEBNET_V203=y
+# CONFIG_PKG_USING_WEBNET_V202 is not set
+# CONFIG_PKG_USING_WEBNET_V201 is not set
+# CONFIG_PKG_USING_WEBNET_V200 is not set
+# CONFIG_PKG_USING_WEBNET_LATEST_VERSION is not set
+CONFIG_PKG_WEBNET_VER="v2.0.3"
+CONFIG_PKG_WEBNET_VER_NUM=0x20003
 # CONFIG_PKG_USING_MONGOOSE is not set
 # CONFIG_PKG_USING_MYMQTT is not set
 # CONFIG_PKG_USING_KAWAII_MQTT is not set
@@ -390,7 +438,35 @@ CONFIG_PKG_USING_CJSON_V1715=y
 CONFIG_PKG_CJSON_VER="v1.7.15"
 # CONFIG_PKG_USING_JSMN is not set
 # CONFIG_PKG_USING_LIBMODBUS is not set
-# CONFIG_PKG_USING_FREEMODBUS is not set
+CONFIG_PKG_USING_FREEMODBUS=y
+CONFIG_PKG_FREEMODBUS_PATH="/packages/iot/freemodbus"
+CONFIG_PKG_MODBUS_MASTER=y
+
+#
+# advanced configuration
+#
+CONFIG_RT_M_DISCRETE_INPUT_START=0
+CONFIG_RT_M_DISCRETE_INPUT_NDISCRETES=16
+CONFIG_RT_M_COIL_START=0
+CONFIG_RT_M_COIL_NCOILS=64
+CONFIG_RT_M_REG_INPUT_START=0
+CONFIG_RT_M_REG_INPUT_NREGS=100
+CONFIG_RT_M_REG_HOLDING_START=0
+CONFIG_RT_M_REG_HOLDING_NREGS=100
+CONFIG_RT_M_HD_RESERVE=0
+CONFIG_RT_M_IN_RESERVE=0
+CONFIG_RT_M_CO_RESERVE=0
+CONFIG_RT_M_DI_RESERVE=0
+# end of advanced configuration
+
+CONFIG_PKG_MODBUS_MASTER_RTU=y
+CONFIG_RT_MODBUS_MASTER_USE_CONTROL_PIN=y
+CONFIG_MODBUS_MASTER_RT_CONTROL_PIN_INDEX=132
+# CONFIG_PKG_MODBUS_MASTER_SAMPLE is not set
+# CONFIG_PKG_MODBUS_SLAVE is not set
+CONFIG_PKG_USING_FREEMODBUS_V160=y
+# CONFIG_PKG_USING_FREEMODBUS_LATEST_VERSION is not set
+CONFIG_PKG_FREEMODBUS_VER="v1.6.0"
 # CONFIG_PKG_USING_LJSON is not set
 # CONFIG_PKG_USING_EZXML is not set
 # CONFIG_PKG_USING_NANOPB is not set
@@ -418,7 +494,7 @@ CONFIG_PKG_CJSON_VER="v1.7.15"
 # CONFIG_PKG_USING_NOPOLL is not set
 CONFIG_PKG_USING_NETUTILS=y
 CONFIG_PKG_NETUTILS_PATH="/packages/iot/netutils"
-# CONFIG_PKG_NETUTILS_TFTP is not set
+CONFIG_PKG_NETUTILS_TFTP=y
 # CONFIG_PKG_NETUTILS_IPERF is not set
 # CONFIG_PKG_NETUTILS_NETIO is not set
 CONFIG_PKG_NETUTILS_NTP=y
@@ -710,7 +786,27 @@ CONFIG_PKG_FAL_VER_NUM=0x10000
 # CONFIG_PKG_USING_SQLITE is not set
 # CONFIG_PKG_USING_RTI is not set
 # CONFIG_PKG_USING_DFS_YAFFS is not set
-# CONFIG_PKG_USING_LITTLEFS is not set
+CONFIG_PKG_USING_LITTLEFS=y
+CONFIG_PKG_LITTLEFS_PATH="/packages/system/littlefs"
+# CONFIG_PKG_USING_LITTLEFS_V090 is not set
+# CONFIG_PKG_USING_LITTLEFS_V170 is not set
+# CONFIG_PKG_USING_LITTLEFS_V172 is not set
+# CONFIG_PKG_USING_LITTLEFS_V201 is not set
+# CONFIG_PKG_USING_LITTLEFS_V205 is not set
+# CONFIG_PKG_USING_LITTLEFS_V214 is not set
+# CONFIG_PKG_USING_LITTLEFS_V220 is not set
+# CONFIG_PKG_USING_LITTLEFS_V221 is not set
+# CONFIG_PKG_USING_LITTLEFS_V230 is not set
+CONFIG_PKG_USING_LITTLEFS_LATEST_VERSION=y
+CONFIG_LFS_READ_SIZE=256
+CONFIG_LFS_PROG_SIZE=256
+CONFIG_LFS_BLOCK_SIZE=4096
+CONFIG_LFS_CACHE_SIZE=256
+CONFIG_LFS_BLOCK_CYCLES=-1
+# CONFIG_DFS_LFS_READONLY is not set
+CONFIG_LFS_THREADSAFE=y
+CONFIG_LFS_LOOKAHEAD_MAX=128
+CONFIG_PKG_LITTLEFS_VER="latest"
 # CONFIG_PKG_USING_DFS_JFFS2 is not set
 # CONFIG_PKG_USING_DFS_UFFS is not set
 # CONFIG_PKG_USING_LWEXT4 is not set
@@ -732,12 +828,74 @@ CONFIG_PKG_FAL_VER_NUM=0x10000
 # CONFIG_PKG_USING_MCUBOOT is not set
 # CONFIG_PKG_USING_TINYUSB is not set
 # CONFIG_PKG_USING_CHERRYUSB is not set
+# CONFIG_PKG_USING_KMULTI_RTIMER is not set
 # end of system packages
 
 #
 # peripheral libraries and drivers
 #
-# CONFIG_PKG_USING_SENSORS_DRIVERS is not set
+CONFIG_PKG_USING_SENSORS_DRIVERS=y
+# CONFIG_PKG_USING_FINGERPRINT is not set
+# CONFIG_PKG_USING_LSM6DSM is not set
+# CONFIG_PKG_USING_LSM6DSL is not set
+# CONFIG_PKG_USING_LPS22HB is not set
+# CONFIG_PKG_USING_HTS221 is not set
+# CONFIG_PKG_USING_LSM303AGR is not set
+# CONFIG_PKG_USING_BME280 is not set
+# CONFIG_PKG_USING_BME680 is not set
+# CONFIG_PKG_USING_BMA400 is not set
+# CONFIG_PKG_USING_BMI160_BMX160 is not set
+# CONFIG_PKG_USING_SPL0601 is not set
+# CONFIG_PKG_USING_MS5805 is not set
+# CONFIG_PKG_USING_DA270 is not set
+# CONFIG_PKG_USING_DF220 is not set
+# CONFIG_PKG_USING_HSHCAL001 is not set
+# CONFIG_PKG_USING_BH1750 is not set
+# CONFIG_PKG_USING_MPU6XXX is not set
+# CONFIG_PKG_USING_AHT10 is not set
+# CONFIG_PKG_USING_AP3216C is not set
+# CONFIG_PKG_USING_TSL4531 is not set
+# CONFIG_PKG_USING_DS18B20 is not set
+# CONFIG_PKG_USING_DHT11 is not set
+# CONFIG_PKG_USING_DHTXX is not set
+# CONFIG_PKG_USING_GY271 is not set
+# CONFIG_PKG_USING_GP2Y10 is not set
+# CONFIG_PKG_USING_SGP30 is not set
+# CONFIG_PKG_USING_HDC1000 is not set
+# CONFIG_PKG_USING_BMP180 is not set
+# CONFIG_PKG_USING_BMP280 is not set
+# CONFIG_PKG_USING_SHTC1 is not set
+# CONFIG_PKG_USING_BMI088 is not set
+# CONFIG_PKG_USING_HMC5883 is not set
+# CONFIG_PKG_USING_MAX6675 is not set
+# CONFIG_PKG_USING_TMP1075 is not set
+# CONFIG_PKG_USING_SR04 is not set
+# CONFIG_PKG_USING_CCS811 is not set
+CONFIG_PKG_USING_PMSXX=y
+CONFIG_PKG_PMSXX_PATH="/packages/peripherals/sensors/pmsxx"
+# CONFIG_PKG_USING_PMSXX_BASIC is not set
+CONFIG_PKG_USING_PMSXX_ENHANCED=y
+CONFIG_PKG_USING_PMSXX_SEND_WAIT_TIME=2000
+# CONFIG_PKG_USING_PMSXX_INIT_ASYN is not set
+# CONFIG_PKG_USING_PMSXX_UART_DMA is not set
+# CONFIG_PKG_USING_PMSXX_DEBUG is not set
+# CONFIG_PKG_USING_PMSXX_SAMPLE is not set
+CONFIG_PKG_USING_PMSXX_LATEST_VERSION=y
+CONFIG_PKG_PMSXX_VER="latest"
+# CONFIG_PKG_USING_RT3020 is not set
+# CONFIG_PKG_USING_MLX90632 is not set
+# CONFIG_PKG_USING_MS5611 is not set
+# CONFIG_PKG_USING_MAX31865 is not set
+# CONFIG_PKG_USING_VL53L0X is not set
+# CONFIG_PKG_USING_INA260 is not set
+# CONFIG_PKG_USING_MAX30102 is not set
+# CONFIG_PKG_USING_INA226 is not set
+# CONFIG_PKG_USING_LIS2DH12 is not set
+# CONFIG_PKG_USING_HS300X is not set
+# CONFIG_PKG_USING_ZMOD4410 is not set
+# CONFIG_PKG_USING_ISL29035 is not set
+# CONFIG_PKG_USING_MMC3680KJ is not set
+# CONFIG_PKG_USING_QMP6989 is not set
 # CONFIG_PKG_USING_REALTEK_AMEBA is not set
 # CONFIG_PKG_USING_SHT2X is not set
 # CONFIG_PKG_USING_SHT3X is not set
@@ -918,7 +1076,9 @@ CONFIG_BSP_USING_SPI_FLASH=y
 CONFIG_BSP_USING_WIFI=y
 # CONFIG_BSP_USING_OV2640 is not set
 # CONFIG_BSP_USING_GC0328C is not set
-# CONFIG_BSP_USING_FS is not set
+CONFIG_BSP_USING_FS=y
+CONFIG_BSP_USING_SDCARD_FS=y
+CONFIG_BSP_USING_SPI_FLASH_FS=y
 # end of Onboard Peripheral
 
 #
@@ -929,7 +1089,8 @@ CONFIG_BSP_USING_UART=y
 # CONFIG_BSP_USING_UART1 is not set
 # CONFIG_BSP_USING_UART3 is not set
 CONFIG_BSP_USING_UART4=y
-# CONFIG_BSP_USING_UART6 is not set
+CONFIG_BSP_USING_UART5=y
+CONFIG_BSP_USING_UART6=y
 CONFIG_BSP_USING_SPI=y
 CONFIG_BSP_USING_SPI1=y
 # CONFIG_BSP_USING_SPI2 is not set
@@ -937,7 +1098,7 @@ CONFIG_BSP_USING_SPI1=y
 # CONFIG_BSP_USING_QSPI is not set
 # CONFIG_BSP_USING_I2C is not set
 CONFIG_BSP_USING_SDIO=y
-# CONFIG_BSP_USING_SDIO1 is not set
+CONFIG_BSP_USING_SDIO1=y
 CONFIG_BSP_USING_SDIO2=y
 # CONFIG_BSP_USING_SDRAM is not set
 # CONFIG_BSP_USING_ETH is not set
