[fw] finish art_pi_07 project

--- a/firmwares/art_pi_07/.config
+++ b/firmwares/art_pi_07/.config
@@ -495,15 +495,17 @@ CONFIG_PKG_FREEMODBUS_VER="v1.6.0"
 CONFIG_PKG_USING_NETUTILS=y
 CONFIG_PKG_NETUTILS_PATH="/packages/iot/netutils"
 CONFIG_PKG_NETUTILS_TFTP=y
-# CONFIG_PKG_NETUTILS_IPERF is not set
-# CONFIG_PKG_NETUTILS_NETIO is not set
+CONFIG_PKG_NETUTILS_IPERF=y
+CONFIG_PKG_NETUTILS_NETIO=y
 CONFIG_PKG_NETUTILS_NTP=y
 # CONFIG_NTP_USING_AUTO_SYNC is not set
 CONFIG_NETUTILS_NTP_HOSTNAME="cn.ntp.org.cn"
 CONFIG_NETUTILS_NTP_HOSTNAME2="ntp.rt-thread.org"
 CONFIG_NETUTILS_NTP_HOSTNAME3="edu.ntp.org.cn"
-# CONFIG_PKG_NETUTILS_TELNET is not set
-# CONFIG_PKG_NETUTILS_TCPDUMP is not set
+CONFIG_PKG_NETUTILS_TELNET=y
+CONFIG_PKG_NETUTILS_TCPDUMP=y
+# CONFIG_PKG_NETUTILS_TCPDUMP_PRINT is not set
+CONFIG_PKG_NETUTILS_TCPDUMP_DBG=y
 # CONFIG_PKG_USING_NETUTILS_LATEST_VERSION is not set
 CONFIG_PKG_USING_NETUTILS_V132=y
 # CONFIG_PKG_USING_NETUTILS_V131 is not set
@@ -1021,7 +1023,11 @@ CONFIG_PKG_PMSXX_VER="latest"
 # end of entertainment: terminal games and other interesting software packages
 
 # CONFIG_PKG_USING_LIBCSV is not set
-# CONFIG_PKG_USING_OPTPARSE is not set
+CONFIG_PKG_USING_OPTPARSE=y
+CONFIG_PKG_OPTPARSE_PATH="/packages/misc/optparse"
+CONFIG_PKG_USING_OPTPARSE_LATEST_VERSION=y
+CONFIG_PKG_OPTPARSE_VER="latest"
+# CONFIG_OPTPARSE_USING_DEMO is not set
 # CONFIG_PKG_USING_FASTLZ is not set
 # CONFIG_PKG_USING_MINILZO is not set
 # CONFIG_PKG_USING_QUICKLZ is not set
